--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -31,14 +31,14 @@
   <ion-content [fullscreen]="true" class="ion-padding">
     <ion-header collapse="condense">
       <ion-toolbar>
-        <ion-title size="large">Calendario</ion-title>
+        <ion-title size="default">Calendario</ion-title>
       </ion-toolbar>
     </ion-header>
 
     <full-calendar [options]="calendarOptions"></full-calendar>
 
     <ion-button expand="block" color="medium" (click)="volverLogin()">
-      Volver al Login
+      Volver al inicio
     </ion-button>
   </ion-content>
 </div>
