--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -12,8 +12,7 @@
     <div class="logo-container ion-text-center">
       <img src="assets/imagenes/aa8cd491-a400-4d12-9420-9a5b2e45da29.png"
           alt="Company logo"
-          class="logo-img"
-          style="width: 100px; border-radius: 50%;" />
+          class="logo-img"/>
     </div>
 
     <div class="contenido-centrado">
