--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -51,7 +51,7 @@
     <ion-input id="contrasenaInput" [(ngModel)]="contrasena" type="password" name="contrasena" autocomplete="new-password"></ion-input>
 </ion-item>
 
-<ion-button expand="block" color="primary" class="animated-btn" (click)="irALogin()">Aceptar</ion-button>
+<ion-button expand="block" color="primary" class="animated-btn" (click)="guardarYIrAPerfil()">Aceptar</ion-button>
 <ion-button expand="block" class="animated-btn" (click)="mostrar()">Mostrar</ion-button>
 <ion-button expand="block" color="medium" class="animated-btn" (click)="limpiar()">Limpiar</ion-button>
 <ion-button expand="block" color="secondary" class="animated-btn" (click)="irALogin()">Volver</ion-button>
