--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -78,6 +78,12 @@
           </ion-button>
         </div>
 
+        <ion-button expand="block" routerLink="/api" class="boton-api">
+        <ion-icon slot="start" name="globe-outline"></ion-icon>
+        API
+        </ion-button>
+
+
       </form>
     </div>
 
