--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -30,9 +30,32 @@ color: #000;
 font-size: 20px;
 }
 
+.perfil-container {
+display: flex;
+flex-direction: column;
+align-items: center;
+margin: 20px 0;
+}
+
+.avatar-perfil {
+width: 120px;
+height: 120px;
+border: 3px solid #d4af37;
+border-radius: 50%;
+overflow: hidden;
+margin-bottom: 10px;
+}
+
+.texto-foto {
+color: gray;
+font-size: 14px;
+margin-bottom: 10px;
+}
+
 ion-toolbar[color="dark"] {
 --background: #000;
 --color: #d4af37;
+
 ion-title,
 ion-icon,
 ion-buttons {
