--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,20 +1,39 @@
 <ion-header>
 <ion-toolbar>
-<ion-title>Registrate</ion-title>
+<ion-title>Regístrate</ion-title>
 </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
 <div class="contenido-centrado">
 
+
+<div style="text-align: center; margin-bottom: 20px;">
+    <ion-avatar *ngIf="fotoPerfil" class="avatar-preview" style="margin: auto;">
+    <img [src]="fotoPerfil">
+    </ion-avatar>
+
+    <ion-button 
+    size="small"
+    fill="outline"
+    color="dark"
+    (click)="tomarFoto()"
+    style="border: 2px solid gold; border-radius: 12px; margin-top: 10px;"
+    >
+    <ion-icon name="camera" slot="start"></ion-icon>
+    Foto de perfil
+    </ion-button>
+</div>
+
+
 <ion-item class="animated-item">
     <ion-label position="floating">Nombre</ion-label>
-    <ion-input id="nombreInput" [(ngModel)]="nombre" type="text" name="nombre"></ion-input>
+    <ion-input [(ngModel)]="nombre" type="text" name="nombre"></ion-input>
 </ion-item>
 
 <ion-item class="animated-item">
     <ion-label position="floating">Apellido</ion-label>
-    <ion-input id="apellidoInput" [(ngModel)]="apellido" type="text" name="apellido"></ion-input>
+    <ion-input [(ngModel)]="apellido" type="text" name="apellido"></ion-input>
 </ion-item>
 
 <ion-item class="animated-item">
@@ -26,12 +45,10 @@
     </ion-select>
 </ion-item>
 
-
 <ion-item class="animated-item" (click)="mostrarCalendario = true">
     <ion-label position="floating">Fecha de nacimiento</ion-label>
     <ion-input [value]="fechaNacimiento | date:'dd/MM/yyyy'" readonly></ion-input>
 </ion-item>
-
 
 <ion-datetime
     *ngIf="mostrarCalendario"
@@ -43,19 +60,19 @@
 
 <ion-item class="animated-item">
     <ion-label position="floating">Correo</ion-label>
-    <ion-input id="correoInput" [(ngModel)]="correo" type="email" name="correo" autocomplete="email"></ion-input>
+    <ion-input [(ngModel)]="correo" type="email" name="correo" autocomplete="email"></ion-input>
 </ion-item>
 
 <ion-item class="animated-item">
     <ion-label position="floating">Contraseña</ion-label>
-    <ion-input id="contrasenaInput" [(ngModel)]="contrasena" type="password" name="contrasena" autocomplete="new-password"></ion-input>
+    <ion-input [(ngModel)]="contrasena" type="password" name="contrasena" autocomplete="new-password"></ion-input>
 </ion-item>
+
 
 <ion-button expand="block" color="primary" class="animated-btn" (click)="guardarYIrAPerfil()">Aceptar</ion-button>
 <ion-button expand="block" class="animated-btn" (click)="mostrar()">Mostrar</ion-button>
 <ion-button expand="block" color="medium" class="animated-btn" (click)="limpiar()">Limpiar</ion-button>
 <ion-button expand="block" color="secondary" class="animated-btn" (click)="irALogin()">Volver</ion-button>
-
 
 </div>
 </ion-content>
